2002-05-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h (__MINGW_IMPORT): Put extern at start 
	to avoid warnings.  Thanks to: Oscar Fuentes  <ofv@wanadoo.es>.

2002-05-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/snprintf.c: Split out vsnprintf to....
	* mingwex/vsnprintf.c: New file.
	* mingwex/snwprintf.c: Split out vsnwprintf to...
	* mingwex/vsnwprintf.c: New file.
	* mingwex/Makefile.in: Adjust DISTFILES and STDIO_STUB_OBJS.

2002-05-15  Pascal Obry  <obry@gnat.com>

	* include/dirent.h (DIR): Change dd_stat type to int.
	(_WDIR): Likewise.

2002-05-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (vsnprintf): Change inline to __inline__;
	(vsnwprintf): Likewise.
 	* include/wchar.h (vsnwprintf): Likewise.
	(wcstof): Likewise.
	(fwide): Likewise.
	(mbsinit): Likewise.

2002-04-29  Danny Smith  <dannysmith@users.sourceforge.net>

	Change FP default precison from 53 to 64-bit mantissa.
	* Makefile.in (CRT0S): Add CRT_fp8.o.
	(MINGW_OBJS): Replace CRT_fp8.o with CRT_fp10.o.
	* include/float.h: Replace standard float.h defines with
	#include_next<float.h> to use GCC's defines. Adjust comments
	to reflect change.	

2002-04-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/dos.h: Change  prefix "__imp_"  to "_imp__" for
	__GNUC__ without __DECLSPEC_SUPPORTED.
	* include/fnctl.h: Likewise.
	* include/math.h: Likewise.
	* include/stdio.h: Likewise.
	* include/stdlib.h: Likewise.
	* include/time.h: Likewise.
	* include/wctype.h: Likewise.
	* include/ctype.h: Likewise.

2002-04-26  Danny Smith  <dannysmith@users.sourceforge.net>

	Add atexit support for dlls.
	* crt1.c (atexit): Force thunk to _imp__atexit.
	(_onexit): Force thunk to _imp___onexit.
	* dllcrt1.c (DllMainCRTStartup): Initialise private atexit
	table on DLL_PROCESS_ATTACH, clean it up on DLL_PROCESS_DETACH.
	(__dll_exit): New function to run atexit-registered functions